Archive2/38/f1a2b655ea70fc/output
main.cpp: In function 'int main()':
main.cpp:20:32: error: 'const _a_type' has no member named 'field'
     auto fn = (lambda(_a=k)[_a.field ]);
                                ^
